--- a/app/src/main/res/layout/recycler_layout.xml
+++ b/app/src/main/res/layout/recycler_layout.xml
@@ -17,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
